# CandyPoker

./: .gitignore  .ps.solvers.json  CMakeLists.txt  LICENSE  README.md  TODO  build.sh  doc.md  pokerstove.txt  ps.cpp  reg_script.sh  strip_function.sh  up_debug.sh  up_release.sh
Trash/: README  binary_strategy_description.cpp  cmd_heads_up_solver.cpp  cmd_solver.cpp  heads_up.cpp  heads_up_solver.cpp  parser.cpp  parser_decl.cpp
app/: another_sim_idea.cpp  cacher.cpp  cmd_cache.cpp  cmd_eval.cpp  cmd_flopzilla.cpp  cmd_heads_up_solver.cpp  cmd_scratch.cpp  cmd_solver.cpp  create_cache.cpp  driver.cpp  heads_up_solver.cpp  mt_example.cpp  other.cpp  permutation_driver.cpp  pokerstove.cpp  pretty_printer.h  serialization_util.h  sim.cpp  simulator.cpp  some_tests.cpp  tests.cpp
benchmark/: CMakeLists.txt  eval_benchmark.cpp  iterator_benchmark.cpp  map_lookup_benchmark.cpp
gtest/: CMakeLists.txt  cards.cpp  eval.cpp  frontend.cpp  hello_test.cc
lib/: algorithm.cpp  calculator.cpp  calculator_view.cpp  cards.cpp  equity_calc.cpp  eval.cpp  frontend.cpp  heads_up.cpp  heads_up_solver.cpp  parser_decl.cpp  tree.cpp
lib/base/: algorithm.cpp  board_combination_iterator.cpp  card_vector.cpp  cards.cpp  frontend.cpp  hand_vector.cpp  heads_up_solver.cpp  holdem_class_range.cpp  holdem_class_range_vector.cpp  holdem_class_vector.cpp  holdem_hand_vector.cpp  rank_vector.cpp  tree.cpp
lib/eval/: 5_card_map.cpp  6_card_map.cpp  better_class_equity_evaluator.cpp  binary_strategy_description.cpp  calculator.cpp  class_cache.cpp  class_equity_evaluator_cache.cpp  class_equity_evaluator_principal.cpp  class_equity_evaluator_proc.cpp  class_equity_evaluator_quick.cpp  class_range_equity_evaluator_principal.cpp  dispatch_four.cpp  dispatch_generic.cpp  dispatch_generic.h  dispatch_table.h  dispatch_three.cpp  dispatch_three_avx2.cpp  equity_breakdown.cpp  equity_breakdown_matrix.cpp  equity_evaluator.cpp  equity_evaluator_cached.cpp  equity_evaluator_principal.cpp  eval.cpp  evaluator_5_card_map.cpp  evaluator_6_card_map.cpp  generic_dispatch.cpp  generic_shed.h  generic_sub_eval.h  holdem_class_eval_cache_impl.cpp  holdem_class_vector_cache.cpp  holdem_eval_cache_impl.cpp  optimized_transform.h  pass.cpp  pass_eval_hand_instr_vec.cpp  range_equity_evaluator_principal.cpp  rank_opt_device.h  rank_world.cpp
lib/interface/: interface_eval.cpp
lib/sim/: alpha_solver.cpp  delta_sequence.cpp  pipeline.cpp  simple_numeric.cpp  solver.cpp  solver_numeric.cpp  solver_permutation.cpp
lib/support/: singleton_factory.cpp
ps/: algorithm.h  calculator.h  calculator_detail.h  calculator_result.h  calculator_view.h  card_traits.h  cards.h  computation_result.h  decl.h  driver.h  equity_calc.h  equity_calc_detail.h  eval.h  frontend.h  frontend_decl.h  generate.h  hand_vector.h  heads_up.h  heads_up_solver.h  hu_equity_calculator.h  multiway.h  numeric.h  printer.h  ps.h  simulation.h  symbolic.h  transforms.h  tree.h
ps/base/: algorithm.h  board_combination_iterator.h  card_intrinsic.h  card_vector.h  cards.h  cards_fwd.h  cards_intrinsic.h  computer.h  decl.h  frontend.h  frontend_decl.h  generate.h  hand_vector.h  hash.h  holdem_board_decl.h  holdem_class_range.h  holdem_class_range_vector.h  holdem_class_vector.h  holdem_hand_vector.h  instruction.h  mask_set.h  prime_rank_map.h  printer.h  range.h  rank_board_combination_iterator.h  rank_hasher.h  rank_vector.h  suit_hasher.h  tree.h  visit_poker_rankings.h
ps/core/: card_traits.h  cards.h  eval.h  generate.h  player_statistics.h
ps/detail/: array_view.h  cross_product.h  dispatch.h  graph.h  popcount.h  print.h  reinterpret_pointer_cast.h  static_dynamic.h  tree_printer.h  visit_combinations.h  visit_sequence.h  void_t.h  work_schedular.h
ps/eval/: 5_card_map.h  6_card_map.h  aggregator.h  better_class_equity_evaluator.h  better_eval.h  binary_strategy_description.h  calculator.h  calculator_detail.h  calculator_result.h  calculator_view.h  class_cache.h  class_equity_calculator.h  class_equity_evaluator.h  class_equity_evaluator_cache.h  class_equity_evaluator_default.h  class_equity_evaluator_principal.h  class_equity_evaluator_proc.h  class_equity_evaluator_quick.h  class_equity_future.h  class_range_equity_evaluator.h  class_range_equity_evaluator_principal.h  computer.h  computer_eval.h  computer_hash.h  computer_mask.h  dispatch_table.h  equity_breakdown.h  equity_breakdown_matrix.h  equity_calc_detail.h  equity_eval_result.h  equity_evaluator.h  equity_evaluator_cached.h  equity_evaluator_default.h  equity_evaluator_principal.h  equity_evaulator.h  equity_evaulator_impl.h  equity_future.h  equity_future_eval.h  eval.h  evaluator.h  (+23 more)
ps/holdem/: driver.h  equity_calc.h  frontend.h  frontend_decl.h  hasher.h  holdem_range.h  holdem_traits.h  hu_equity_calculator.h  numeric.h  simulation.h  symbolic.h  transforms.h
ps/interface/: interface.h
ps/parser/: parser.h  parser_context.h  subparser.h
ps/sim/: _extra.h  computer.h  computer_factory.h  game_tree.h  game_tree_impl.h  holdem_class_strategy.h  solver.h
ps/support/: any_context.h  array_view.h  command.h  config.h  float.h  index_sequence.h  persistent.h  persistent_impl.h  proc.h  processor.h  push_pull.h  singleton_factory.h
ps/transforms/: calc_primitive.h  consolidate_dup_prim.h  permutate_for_the_better.h  remove_suit_perms.h  transform.h  tree_printer.h
test/: cards.cpp  detail_combintations.cpp  equity_calc.cpp  frontend.cpp  heads_up.cpp  heads_up_solver.cpp  holdem_frontend.cpp  holdem_simulation.cpp  traits.cpp  tree.cpp
